[project]
name = "hypergraph-db"
version = "0.3.0"
description = "A Lightweight Hypergraph Database with hypergraph visualization."
authors = [
    {name = "Yifan Feng", email = "evanfeng97@qq.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["hypergraph", "database", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/iMoonLab/Hypergraph-DB"
Repository = "https://github.com/iMoonLab/Hypergraph-DB"
Issues = "https://github.com/iMoonLab/Hypergraph-DB/issues"

[dependency-groups]
test = [
    "pytest>=6.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-static-i18n>=1.3.0",
    "pymdown-extensions>=10.0.0",
    "matplotlib",
    "scikit-learn",
]
dev = [
    {include-group = "test"},
    {include-group = "docs"},
    "black>=23.0",
    "isort>=5.12", 
    "flake8>=6.0",
    "mypy>=1.0",
    "bandit>=1.7",
    "safety>=2.0",
    "twine>=4.0",
    "ruff>=0.12.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hyperdb"]

[tool.black]
include = '\.pyi?$'
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.flake8]
max-line-length = 119
extend-ignore = ["E203", "W503"]

